--- a/a_d/admin/template/norm/addplace.htm
+++ b/a_d/admin/template/norm/addplace.htm
@@ -56,6 +56,7 @@ EOT;
         <td width="16%">所属城市:</td>
         <td width="84%">
             <select name="city_id">
+                <option value="0">全部</option>
                 <!--
 EOT;
 foreach($citydb AS $key=>$rs){
